[gd_scene load_steps=4 format=3 uid="uid://bl21g2udm0fpo"]

[ext_resource type="Script" path="res://melody/piano_keys/piano_keys_widget.gd" id="1_aatyk"]
[ext_resource type="Texture2D" uid="uid://bvcv27jvvrm8v" path="res://melody/piano_keys/piano_keys.jpg" id="1_lorcs"]

[sub_resource type="LabelSettings" id="LabelSettings_jtsaq"]
font_size = 10

[node name="PianoKeysRoot" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -327.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aatyk")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lorcs")
ignore_texture_size = true

[node name="LowerCover" type="ColorRect" parent="TextureRect"]
offset_right = 32.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.815686)

[node name="MidCover" type="ColorRect" parent="TextureRect"]
offset_left = 32.0
offset_right = 68.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.815686)

[node name="HigherCover" type="ColorRect" parent="TextureRect"]
offset_left = 68.0
offset_right = 99.0
offset_bottom = 50.0
color = Color(0, 0, 0, 0.815686)

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 49.0
offset_right = 99.0
offset_bottom = 66.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Keys" type="Label" parent="Control"]
offset_left = 1.0
offset_top = 47.0
offset_right = 11.0
offset_bottom = 70.0
text = "A W D S"
label_settings = SubResource("LabelSettings_jtsaq")
